ajusting doc 📝
