# swagger_output.json
@@ -11,82 +11,7 @@
     "http"
   ],
   "paths": {
-    "/register": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                },
-                "image": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/login": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/": {
+    "/tasks": {
       "get": {
         "description": "",
         "responses": {
@@ -123,7 +48,7 @@
         }
       }
     },
-    "/active": {
+    "/tasks/active": {
       "get": {
         "description": "",
         "responses": {
@@ -136,7 +61,7 @@
         }
       }
     },
-    "/completed": {
+    "/tasks/completed": {
       "get": {
         "description": "",
         "responses": {
@@ -149,7 +74,7 @@
         }
       }
     },
-    "/todos/{id}": {
+    "/tasks/todos/{id}": {
       "patch": {
         "description": "",
         "parameters": [
@@ -172,6 +97,64 @@
           }
         }
       }
+    },
+    "/register": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Registro de usuário",
+            "schema": {
+              "$ref": "#/definitions/register"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/login": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Login",
+            "schema": {
+              "$ref": "#/definitions/login"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -185,6 +168,36 @@
         "completed": {
           "type": "boolean",
           "example": false
+        }
+      }
+    },
+    "login": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Nome do usuário"
+        },
+        "password": {
+          "type": "string",
+          "example": "Senha do usuário"
+        }
+      }
+    },
+    "register": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Nome do usuário"
+        },
+        "password": {
+          "type": "string",
+          "example": "Senha do usuário"
+        },
+        "image": {
+          "type": "string",
+          "example": "foto do usuário (opcional)"
         }
       }
     }
